--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2705,7 +2705,7 @@ input, select, textarea {
 				}
 
 				#banner header h2 a {
-					border-bottom-color: rgba(255, 255, 255, 0.5);
+					border-bottom-color: rgb(48, 69, 38);
 				}
 
 					#banner header h2 a:hover {
